--- a/index.html
+++ b/index.html
@@ -59,12 +59,20 @@
           <button class="hero-image-button" type="button">Order Service</button>
         </div>
       </section>
+
       <!-- Section 1 -->
+
       <section class="section-our-medots">
         <div class="container">
           <h2 class="visually-hidden">Секція 1</h2>
           <ul class="our-metods-list">
             <li class="our-metods-list-block">
+              <div class="our-metods-icon-block">
+                <svg class="our-metods-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="metod-name">Strategy</h3>
               <p class="metod-text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +80,11 @@
               </p>
             </li>
             <li class="our-metods-list-block">
+              <div class="our-metods-icon-block">
+                <svg class="our-metods-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="metod-name">Punctuality</h3>
               <p class="metod-text">
                 Bring the key message to the brand's audience for the best price
@@ -79,13 +92,25 @@
               </p>
             </li>
             <li class="our-metods-list-block">
+              <div class="our-metods-icon-block">
+                <svg class="our-metods-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="metod-name">Diligence</h3>
               <p class="metod-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
+
             <li class="our-metods-list-block">
+              <div class="our-metods-icon-block">
+                <svg class="our-metods-icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="metod-name">Technologies</h3>
               <p class="metod-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -105,6 +130,52 @@
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Mark Guerrero</h3>
                 <p class="our-team-list-profession">Product Designer</p>
+                <ul class="team-socials">
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="-">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-link">
@@ -112,6 +183,52 @@
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Tom Ford</h3>
                 <p class="our-team-list-profession">Frontend Developer</p>
+                <ul class="team-socials">
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="-">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-link">
@@ -119,6 +236,52 @@
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Camila Garcia</h3>
                 <p class="our-team-list-profession">Marketing</p>
+                <ul class="team-socials">
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="-">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-link">
@@ -126,6 +289,52 @@
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Daniel Wilson</h3>
                 <p class="our-team-list-profession">UI Designer</p>
+                <ul class="team-socials">
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-point">
+                    <a href="-">
+                      <svg
+                        class="team-socials-point-svg"
+                        width="40px"
+                        height="40px"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -151,12 +360,19 @@
               </div>
             </li>
             <li class="list-item">
-              <img
-                src="./images/our-portfolio-2.jpg"
-                alt="Photo Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="our-portfolio-image-wrapper">
+                <img
+                  src="./images/our-portfolio-2.jpg"
+                  alt="Photo Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Cashless Payment</h3>
                 <p class="our-portfolio-type">Marketing</p>
@@ -217,14 +433,49 @@
 
     <!-- Footer -->
     <footer class="block-logo">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-studio-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container container-footer">
+        <div class="container-footer-logo">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-studio-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-social-media">
+          <p class="social-media-title">Social media</p>
+          <ul class="social-media-list">
+            <li class="social-media-list-point">
+              <a href="">
+                <svg width="40" height="40">
+                  <use href="./images/icons.svg#icon-ellipse-intagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list-point">
+              <a href="">
+                <svg width="40" height="40">
+                  <use href="./images/icons.svg#icon-ellipse-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list-point">
+              <a href="">
+                <svg width="40" height="40">
+                  <use href="./images/icons.svg#icon-ellipse-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-list-point">
+              <a href="">
+                <svg width="40" height="40">
+                  <use href="./images/icons.svg#icon-ellipse-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
