--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@160;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -68,7 +68,7 @@
           <ul class="our-metods-list">
             <li class="our-metods-list-block">
               <div class="our-metods-icon-block">
-                <svg class="our-metods-icon" width="64px" height="64px">
+                <svg class="our-metods-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -81,7 +81,7 @@
             </li>
             <li class="our-metods-list-block">
               <div class="our-metods-icon-block">
-                <svg class="our-metods-icon" width="64px" height="64px">
+                <svg class="our-metods-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -93,7 +93,7 @@
             </li>
             <li class="our-metods-list-block">
               <div class="our-metods-icon-block">
-                <svg class="our-metods-icon" width="64px" height="64px">
+                <svg class="our-metods-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -106,7 +106,7 @@
 
             <li class="our-metods-list-block">
               <div class="our-metods-icon-block">
-                <svg class="our-metods-icon" width="64px" height="64px">
+                <svg class="our-metods-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -135,8 +135,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -146,8 +146,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -157,8 +157,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -168,8 +168,8 @@
                     <a href="-">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -188,8 +188,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -199,8 +199,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -210,8 +210,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -221,8 +221,8 @@
                     <a href="-">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -241,8 +241,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -252,8 +252,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -263,8 +263,8 @@
                     <a href="">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -274,8 +274,8 @@
                     <a href="-">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -291,44 +291,44 @@
                 <p class="our-team-list-profession">UI Designer</p>
                 <ul class="team-socials">
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="aaa" class="team-socils-link">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="bbb">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="ccc">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="-">
+                    <a href="eee">
                       <svg
                         class="team-socials-point-svg"
-                        width="40px"
-                        height="40px"
+                        width="16"
+                        height="16"
                       >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -347,19 +347,26 @@
           <h2 class="our-portfolio-title">Our Portfolio</h2>
 
           <ul class="our-portfolio-list">
-            <li class="list-item">
-              <img
-                src="./images/our-portfolio-1.jpg"
-                alt="Photo Banking App"
-                width="360"
-                height="300"
-              />
+            <li class="our-portfolio-list-point">
+              <div class="our-portfolio-image-wrapper">
+                <img
+                  src="./images/our-portfolio-1.jpg"
+                  alt="Photo Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Banking App</h3>
                 <p class="our-portfolio-type">App</p>
               </div>
             </li>
-            <li class="list-item">
+            <li class="our-portfolio-list-point">
               <div class="our-portfolio-image-wrapper">
                 <img
                   src="./images/our-portfolio-2.jpg"
@@ -373,54 +380,83 @@
                   · Cloud Storage App
                 </p>
               </div>
+              `
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Cashless Payment</h3>
                 <p class="our-portfolio-type">Marketing</p>
               </div>
             </li>
-            <li class="list-item">
-              <img
-                src="./images/our-portfolio-3.jpg"
-                alt="Photo Meditation App"
-                width="360"
-                height="300"
-              />
+            <li class="our-portfolio-list-point">
+              <div class="our-portfolio-image-wrapper">
+                <img
+                  src="./images/our-portfolio-3.jpg"
+                  alt="Photo Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Meditation App</h3>
                 <p class="our-portfolio-type">App</p>
               </div>
             </li>
-            <li class="list-item">
-              <img
-                src="./images/our-portfolio-4.jpg"
-                alt="Photo Taxi Service"
-                width="360"
-                height="300"
-              />
+            <li class="our-portfolio-list-point">
+              <div class="our-portfolio-image-wrapper">
+                <img
+                  src="./images/our-portfolio-4.jpg"
+                  alt="Photo Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Taxi Service</h3>
                 <p class="our-portfolio-type">Marketing</p>
               </div>
             </li>
-            <li class="list-item">
-              <img
-                src="./images/our-portfolio-5.jpg"
-                alt="Photo Screen Illustrations"
-                width="360"
-                height="300"
-              />
+            <li class="our-portfolio-list-point">
+              <div class="our-portfolio-image-wrapper">
+                <img
+                  src="./images/our-portfolio-5.jpg"
+                  alt="Photo Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Screen Illustrations</h3>
                 <p class="our-portfolio-type">Design</p>
               </div>
             </li>
-            <li class="list-item">
-              <img
-                src="./images/our-portfolio-6.jpg"
-                alt="Photo Online Courses"
-                width="360"
-                height="300"
-              />
+            <li class="our-portfolio-list-point">
+              <div class="our-portfolio-image-wrapper">
+                <img
+                  src="./images/our-portfolio-6.jpg"
+                  alt="Photo Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Online Courses</h3>
                 <p class="our-portfolio-type">Marketing</p>
@@ -447,30 +483,30 @@
           <p class="social-media-title">Social media</p>
           <ul class="social-media-list">
             <li class="social-media-list-point">
-              <a href="">
-                <svg width="40" height="40">
-                  <use href="./images/icons.svg#icon-ellipse-intagram"></use>
+              <a href="aaa" class="social-media-list-link">
+                <svg class="social-media-list-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-point">
-              <a href="">
-                <svg width="40" height="40">
-                  <use href="./images/icons.svg#icon-ellipse-twitter"></use>
+              <a href="sss" class="social-media-list-link">
+                <svg class="social-media-list-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-point">
-              <a href="">
-                <svg width="40" height="40">
-                  <use href="./images/icons.svg#icon-ellipse-facebook"></use>
+              <a href="ddd" class="social-media-list-link">
+                <svg class="social-media-list-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-point">
-              <a href="">
-                <svg width="40" height="40">
-                  <use href="./images/icons.svg#icon-ellipse-linkedin"></use>
+              <a href="fff" class="social-media-list-link">
+                <svg class="social-media-list-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
