--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
         <div class="container">
           <h2 class="our-team-title">Our Team</h2>
           <ul class="team-list">
-            <li class="list-link">
+            <li class="team-list-link">
               <img src="./images/team-card-1.jpg" alt="Photo Mark Guerrero" />
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Mark Guerrero</h3>
                 <p class="our-team-list-profession">Product Designer</p>
                 <ul class="team-socials">
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -143,7 +143,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -154,7 +154,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -165,7 +165,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="-">
+                    <a href="-" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -178,14 +178,14 @@
                 </ul>
               </div>
             </li>
-            <li class="list-link">
+            <li class="team-list-link">
               <img src="./images/team-card-2.jpg" alt="Photo Tom Ford" />
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Tom Ford</h3>
                 <p class="our-team-list-profession">Frontend Developer</p>
                 <ul class="team-socials">
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -196,7 +196,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -207,7 +207,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -218,7 +218,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="-">
+                    <a href="-" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -231,14 +231,14 @@
                 </ul>
               </div>
             </li>
-            <li class="list-link">
+            <li class="team-list-link">
               <img src="./images/team-card-3.jpg" alt="Photo Camila Garcia" />
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Camila Garcia</h3>
                 <p class="our-team-list-profession">Marketing</p>
                 <ul class="team-socials">
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -249,7 +249,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -260,7 +260,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="">
+                    <a href="" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -271,7 +271,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="-">
+                    <a href="-" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -284,14 +284,14 @@
                 </ul>
               </div>
             </li>
-            <li class="list-link">
+            <li class="team-list-link">
               <img src="./images/team-card-4.jpg" alt="Photo Daniel Wilson" />
               <div class="our-team-block-name">
                 <h3 class="our-team-list-name">Daniel Wilson</h3>
                 <p class="our-team-list-profession">UI Designer</p>
                 <ul class="team-socials">
                   <li class="team-socials-point">
-                    <a href="aaa" class="team-socils-link">
+                    <a href="aaa" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -302,7 +302,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="bbb">
+                    <a href="bbb" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -313,7 +313,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="ccc">
+                    <a href="ccc" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
@@ -324,7 +324,7 @@
                     </a>
                   </li>
                   <li class="team-socials-point">
-                    <a href="eee">
+                    <a href="eee" class="team-socials-link">
                       <svg
                         class="team-socials-point-svg"
                         width="16"
