--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
             >Web<span class="logo-studio">Studio</span></a
           >
           <ul class="navigation-list">
-            <li><a class="link-navigation" href="./index.html">Studio</a></li>
+            <li>
+              <a
+                class="link-navigation first-link-navigation"
+                href="./index.html"
+                >Studio</a
+              >
+            </li>
             <li><a class="link-navigation" href="">Portfolio</a></li>
             <li><a class="link-navigation" href="">Contacts</a></li>
           </ul>
@@ -380,7 +386,6 @@
                   · Cloud Storage App
                 </p>
               </div>
-              `
               <div class="our-portfolio-block-name">
                 <h3 class="our-portfolio-name">Cashless Payment</h3>
                 <p class="our-portfolio-type">Marketing</p>
